tests/baselines/reference/optionalProperties02.errors.txt
tests/cases/conformance/types/typeRelationships/comparable/optionalProperties02.ts(6,1): error TS2352: Conversion of type '{ a: undefined; }' to type 'Foo' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Property 'b' is missing in type '{ a: undefined; }' but required in type 'Foo'.


==== tests/cases/conformance/types/typeRelationships/comparable/optionalProperties02.ts (1 errors) ====
    interface Foo {
        a?: string;
        b: string;
    }
    
    <Foo>{ a: undefined };
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type '{ a: undefined; }' to type 'Foo' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Property 'b' is missing in type '{ a: undefined; }' but required in type 'Foo'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/comparable/optionalProperties02.ts:3:5: 'b' is declared here.